# chmpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  README.rst  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: cache.yml  docs.yml  manylinux-publish.yml  python-publish.yml  pythonpackage.yml  release.yml  wheels.yml
chmpy/: __init__.py  _invariants.pyx  cif.py  crystal.py  density.py  molecule.py  shape_descriptors.py  shelx.py  surface.py  util.py  xyz_file.py
chmpy/cmd/: convert.py
chmpy/core/: dimer.py  element.py  molecule.py  wolf.py
chmpy/crystal/: __init__.py  asymmetric_unit.py  crystal.py  point_group.py  powder.py  sgdata.json  space_group.py  symmetry_operation.py  unit_cell.py
chmpy/crystal/sfac/: __init__.py  _sfac.pyx  waaskirf.npz
chmpy/descriptors/: __init__.py  symmetry_function_ani1.py
chmpy/exe/: __init__.py  exe.py  gaussian.py  gulp.py  tonto.py  xtb.py
chmpy/ext/: charges.py  cosmo.py  crystal.py  cx.py  elastic_tensor.py  excitations.py  traj.py  vasp.py
chmpy/fmt/: ascii.py  cif.py  crystal17.py  cube.py  fchk.py  gaussian_log.py  gulp.py  nwchem.py  sdf.py  shelx.py  smiles.py  tmol.py  vasp.py  xtb.py  xyz_file.py
chmpy/interpolate/: __init__.py  _density.pyx  _linterp.c  density.py  interp.py  linterp.c
chmpy/ints/: lebedev.py  lebedev_grids.npz  solvation.py
chmpy/mc/: __init__.py  _mc.py  _mc_lewiner.pyx  mc.py
chmpy/opt/: __init__.py  gulp.py  xtb.py
chmpy/sampling/: __init__.py  _lds.pyx
chmpy/sfac/: _sfac.pyx
chmpy/shape/: __init__.py  _invariants.pyx  _sht.pyx  reconstruct.py  shape_descriptors.py  sht.py
chmpy/templates/: __init__.py  gulp.jinja2
chmpy/util/: color.py  dict.py  exe.py  mesh.py  num.py  path.py  text.py  unit.py
docs/: asymmetric_unit.md  conf.py  crystal.md  element.md  index.md  index.rst  modules.rst  molecule.md  parallel.md  shape_descriptors.md  shmolecule.mc.rst  shmolecule.rst  space_group.md  unit_cell.md
docs/API/: sampling.md  shape_descriptors.md
docs/API/core/: element.md  molecule.md
docs/API/crystal/: asymmetric_unit.md  crystal.md  space_group.md  symmetry_operation.md  unit_cell.md
docs/API/ext/: charges.md  elastic_tensor.md
docs/API/util/: color.md  dict.md  mesh.md  num.md  text.md
docs/source/: conf.py  index.md  index.rst  shape_descriptors.md
docs/source/api/: core.rst  crystal.rst  ext.rst  index.md  sampling.rst  shape_descriptors.rst  util.rst
examples/: describe_cifs.py
parallel/: index.html
promolecule/: __init__.py  _density.pyx  _invariants.pyx  clebsch.c  crystal.py  density.py  element.py  element_data.py  interp.py  linterp.c  molecule.py  shape_descriptors.py  shelx.py  sht.py  space_group.py  surface.py  thakkar_interp.npz  util.py
promolecule/mc/: __init__.py  _mc_lewiner.pyx  mc.py
reference/SUMMARY/: index.html
reference/chmpy/surface/: index.html
scripts/: mkdocs_gen_ref_pages.py
search/: search_index.json
shape_descriptors/: index.html
shmolecule/: __init__.py  _density.c  _density.pyx  _invariants.c  _invariants.pyx  charges.py  cif.py  crystal.py  density.py  element.py  element_data.py  interp.py  linterp.c  mol2.py  molecule.py  point_group.py  reconstruct.py  sdf.py  shape_descriptors.py  sht.py  space_group.py  surface.py  thakkar_interp.npz  unit_cell.py  util.py  xyz_file.py
shmolecule/mc/: _mc_lewiner.c  _mc_lewiner.pyx  mc.py
shmolecule/sfac/: __init__.py  _sfac.pyx  atomic_form_factors.npz  atomic_form_factors.py
shmolecule/subgraphs/: __init__.py  carboxylic_acid.gt
src/chmpy/: __init__.py  surface.py
src/chmpy/cmd/: convert.py
src/chmpy/core/: __init__.py  dimer.py  eeq.py  element.py  molecule.py  wolf.py
src/chmpy/crystal/: __init__.py  asymmetric_unit.py  crystal.py  eeq_pbc.py  fingerprint.py  point_group.py  powder.py  space_group.py  symmetry_operation.py  unit_cell.py  wulff.py
src/chmpy/descriptors/: __init__.py  symmetry_function_ani1.py
src/chmpy/exe/: __init__.py  exe.py  gaussian.py  gulp.py  raspa.py  tonto.py  xtb.py
src/chmpy/ext/: ase.py  charges.py  cosmo.py  crystal.py  cx.py  elastic_tensor.py  excitations.py  solvation_parameters.py  traj.py  vasp.py
src/chmpy/ff/: __init__.py  lj_params.json  params.py
src/chmpy/fmt/: __init__.py  ascii.py  cif.py  crystal17.py  cube.py  fchk.py  gaussian_log.py  gen.py  gmf.py  grd.py  gulp.py  mol2.py  nwchem.py  pdb.py  raspa.py  sdf.py  shelx.py  smiles.py  tmol.py  vasp.py  xtb.py  xyz_file.py
tests/: __init__.py  acetic_acid.cif  iceII.cif  test_crystal.py  test_density.py  test_element.py  test_interp.py  test_molecule.py  test_shape_descriptors.py  test_sht.py  test_space_group.py  test_surface.py  water.xyz
tests/core/: test_element.py  test_molecule.py
tests/crystal/: test_asymmetric_unit.py  test_crystal.py  test_space_group.py  test_unit_cell.py
tests/ext/: test_eem.py  test_elastic_tensor.py
tests/fmt/: test_smiles.py
tests/promolecule/: test_density.py  test_interp.py  test_surface.py
tests/sampling/: test_quasirandom.py
tests/shape/: test_shape_descriptors.py  test_sht.py
tests/test_files/: r3c_example.cif
(+151 files in other folders)
