[project]
name = "chmpy"
version = "1.1"
requires-python = ">=3.8"
description = "Molecules, crystals, promolecule and Hirshfeld surfaces using python."
authors = [
    { name = "Peter Spackman", email = "peterspackman@fastmail.com"}
]
license = { file="LICENSE.txt" }
dependencies = [
    "numpy>=1.12",
    "scipy>=1.8.1",
    "trimesh>=3.12.9",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.2",
    "Jinja2>=3.1.2"
]

[project.optional-dependencies]
graph = ["graph_tool"]
docs = ["sphinx", "furo", "myst-parser"]

[project.urls]
homepage = "https://github.com/peterspackman/chmpy"
repository = "https://github.com/peterspackman/chmpy"
documentation = "https://peterspackman.github.io/chmpy/"

[build-system]
requires = ["setuptools>=68.0", "cython>=3.0", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
skip = "pp*"
