[project]
name = "chmpy"
readme = "README.md"
version = "1.1.6"
requires-python = ">=3.10"
description = "Molecules, crystals, promolecule and Hirshfeld surfaces using python."
authors = [
    { name = "Peter Spackman", email = "peterspackman@fastmail.com"}
]
license = { file="LICENSE.txt" }
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "trimesh>=4.5.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "Jinja2>=3.1.2"
]

[project.optional-dependencies]
graph = ["graph_tool"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "mkdocs-gen-files", "mkdocs-literate-nav"]

[project.urls]
homepage = "https://github.com/peterspackman/chmpy"
repository = "https://github.com/peterspackman/chmpy"
documentation = "https://peterspackman.github.io/chmpy/"

[build-system]
requires = ["setuptools>=68.0", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
skip = "pp*"

[tool.ruff]
# Enable pycodestyle (E), Pyflakes (F), and import sorting (I)
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyx", "*.pyi"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # ambiguous variable name
    "E501",  # line too long (handled by formatter)
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.isort]
known-first-party = ["chmpy"]
known-third-party = ["numpy", "scipy", "matplotlib", "seaborn", "trimesh", "jinja2"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"src/chmpy/tests/**/*.py" = ["E501"]  # allow long lines in tests
