[project]
name = "chmpy"
readme = "README.md"
version = "1.1.10"
requires-python = ">=3.10"
description = "Molecules, crystals, promolecule and Hirshfeld surfaces using python."
authors = [
    { name = "Peter Spackman", email = "peterspackman@fastmail.com"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "trimesh>=4.5.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "Jinja2>=3.1.2"
]

[project.optional-dependencies]
graph = ["graph_tool"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "mkdocs-gen-files", "mkdocs-literate-nav"]

[project.urls]
homepage = "https://github.com/peterspackman/chmpy"
repository = "https://github.com/peterspackman/chmpy"
documentation = "https://peterspackman.github.io/chmpy/"

[build-system]
requires = ["setuptools>=68.0", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
skip = "pp*"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]
