[metadata]
name = chmpy
version = attr: chmpy.VERSION
description = Molecules, crystals, promolecule and Hirshfeld surfaces using python
long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
keywords = chemistry, molecule, crystal, electron density, isosurface
license = GNU General Public License v3.0 or later
classifiers = 
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = chmpy
scripts = chmpy/cmd/convert.py
install_requires = 
    numpy
    scipy
    trimesh
    matplotlib

[options.package_data]
* = *.npz
chmpy.subgraphs = *.gt
chmpy.templates =  *.jinja2

[options.extras_require]
graph = graph_tool
